feat(i18n): add internationalization support for vaccine names
- Add VACCINE_NAME_LABELS mapping in constants
- Map API vaccine names to translation keys
- Add vaccine_names translations for ES and EN
- Update pet details page to use translated vaccine names
- Supports both Spanish and English vaccine names

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -302,6 +302,14 @@
           "fiv": "FIV"
         }
       },
+      "vaccine_names": {
+        "rabies": "Rabies",
+        "dhpp": "DHPP (Distemper, Hepatitis, Parvovirus, Parainfluenza)",
+        "bordetella": "Bordetella (Kennel Cough)",
+        "leptospirosis": "Leptospirosis",
+        "coronavirus": "Coronavirus",
+        "lyme_disease": "Lyme Disease"
+      },
       "form": {
         "name_placeholder": "Pet's name",
         "select_species": "Select species",
